api integration and fixations
